migrations and construct db and configure api
